--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<body>
 		<div id="header">
 			<div class="container">
-				<div id>
-					<h1>ELRUMI</h1>
+				<div class="logo">
+					<h2>ELRUMI</h2>
 				</div>
-				<div id="nav">
-					<ul>
+				<div>
+					<ul class="nav">
 						<li><a href="#">HOME</a></li>
 						<li><a href="#">ABOUT</a></li>
 						<li><a href="#">SERVICES</a></li>
@@ -24,15 +24,16 @@
 				</div>
 				<div class="clearfix"></div>
 				<div class="word">
-					<h1>WE MAKE SOMETHING YOU WILL LOVE</h1>
+					<h1>WE MAKE SOMETHING <br>YOU WILL LOVE</h1>
 				</div>
 			</div>
 		</div>
 		<div class="banner">
 			<h2>OUR PORTFOLIO</h2>
 			<h5>See some of our work</h5>
+			<h6>-------</h6>
 		</div>
-		<div class="nav">
+		<div class="nav2">
 			<ul>
 				<li><a href="#">all</a></li>
 				<li><a href="#">branding</a></li>
@@ -41,51 +42,62 @@
 				<li><a href="#">motion graphic</a></li>
 				<li><a href="#">illustration</a></li>
 			</ul>
-			<div class="clearfix"></div>
 		</div>
-		<div class="col-12">
-			<div class="col-4">
-				<img src="http://placehold.it/50/50" alt="col-4">
+		<div class="clearfix"></div>
+			<div class="container-pic">
+				<div class="col-12">
+					<div class="col-4">
+						<img src="http://placehold.it/370x230" alt="col-4">
+					</div>
+					<div class="col-4">
+						<img src="http://placehold.it/370x230" alt="col-4">
+					</div>
+					<div class="col-4">
+						<img src="http://placehold.it/370x230" alt="col-4">
+					</div>
+				</div>
+
+				<div class="clearfix"></div>
+				
+					<div class="col-12">
+						<div class="col-4">
+							<img src="http://placehold.it/370x230" alt="col-4">
+						</div>
+						<div class="col-4">
+							<img src="http://placehold.it/370x230" alt="col-4">
+						</div>
+						<div class="col-4">
+							<img src="http://placehold.it/370x230" alt="col-4">
+						</div>
+					</div>
+
+					<div class="clearfix"></div>
+
+					<div class="col-12">
+						<div class="col-4">
+							<img src="http://placehold.it/370x230" alt="col-4">
+						</div>
+						<div class="col-4">
+							<img src="http://placehold.it/370x230" alt="col-4">
+						</div>
+						<div class="col-4">
+							<img src="http://placehold.it/370x230" alt="col-4">
+						</div>
+					</div>
+
+					<div class="clearfix"></div>
+
+					<div class="mark">
+						<img src="http://placehold.it/25x25" alt="mark">
+						<h5>Load more</h5>
+					</div>
 			</div>
-			<div class="col-4">
-				<img src="http://placehold.it/50/50" alt="col-4">
-			</div>
-			<div class="col-4">
-				<img src="http://placehold.it/50/50" alt="col-4">
-			</div>
-		</div>
-		<div class="col-12">
-			<div class="col-4">
-				<img src="http://placehold.it/50/50" alt="col-4">
-			</div>
-			<div class="col-4">
-				<img src="http://placehold.it/50/50" alt="col-4">
-			</div>
-			<div class="col-4">
-				<img src="http://placehold.it/50/50" alt="col-4">
-			</div>
-		</div>
-		<div class="col-12">
-			<div class="col-4">
-				<img src="http://placehold.it/50/50" alt="col-4">
-			</div>
-			<div class="col-4">
-				<img src="http://placehold.it/50/50" alt="col-4">
-			</div>
-			<div class="col-4">
-				<img src="http://placehold.it/50/50" alt="col-4">
-			</div>
-		</div>
-		<div class="mark">
-			<img src="http://placehold.it/45/30" alt="mark">
-			<h5>Load more</h5>
-		</div>
-		<div class="footer">
-			<div id="container">
-				<div class="id">
+		<div id="footer">
+			<div class="container-footer">
+				<div class="logo2">
 					<h3>ELRUMI</h3>
 				</div>
-				<div class="nav">
+				<div class="nav3">
 					<ul>
 						<li><a href="#">facebook</a></li>
 						<li><a href="#">twitter</a></li>
@@ -96,7 +108,7 @@
 				</div>
 				<div class="clearfix"></div>
 				<div class="copyright">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, reprehenderit.</p>
+					<p>2015 Elrumi Desinged by Pottereight</p>
 				</div>
 			</div>
 		</div>
