--- a/thefox RWD/index.html
+++ b/thefox RWD/index.html
@@ -48,8 +48,7 @@
 			<div class="clearfix"></div>
 		</div>
 	</div>
-
-	<div class="features">
+	<!-- <div class="features">
 		<div class="container">
 			
 			<div class="feature">
@@ -216,4 +215,4 @@
 
 
 </body>
-</html>
+</html> -->
