--- a/thefox/index.html
+++ b/thefox/index.html
@@ -25,13 +25,14 @@
 					<li><a href="#">portfolio</a></li>
 				</ul>
 			</div>
-			<div class="clearfix"></div>
+			
 			<div class="burger-logo" class="open">
 				<img src="images/menu.png" alt="burger-logo">
 			</div>
 		</div>
 	</div>
-
+	<div class="clearfix"></div>
+	
 	<div class="banner">
 		<div class="banner-container">
 			<div class="left">
@@ -131,46 +132,200 @@
 			<div class="clearfix"></div>
 		</div>
 	</div>	
-		<div class="works">
-			<div class="row">
-				<div class="col-3">
-					<img src="http://placehold.it/480x300" alt="">
-				</div>
-				<div class="col-3">
-					<img src="http://placehold.it/480x300" alt="">
-				</div>
+ 	<div class="work">
+		<div class="row">
+			<div class="col-3">
+				<img src="http://placehold.it/480x300" alt="">
+			</div>
+			<div class="col-3">
+				<img src="http://placehold.it/480x300" alt="">
+			</div>
 
-				<div class="col-3">
-					<img src="http://placehold.it/480x300" alt="">
-				</div>
-				<div class="col-3">
-					<img src="http://placehold.it/480x300" alt="">
-				</div>
-				<div class="clearfix"></div>
+			<div class="col-3">
+				<img src="http://placehold.it/480x300" alt="">
 			</div>
-			<div class="row">
-				<div class="row-container">	
-					<div class="col-12">
-						<img src="http://placehold.it/960x300" alt="">
-					</div>
-					<div class="col-6">
-						<img src="http://placehold.it/480x300" alt="">
-					</div>
-					<div class="col-6">
-						<img src="http://placehold.it/480x300" alt="">
-					</div>
-					<div class="clearfix"></div>
-				</div>
+			<div class="col-3">
+				<img src="http://placehold.it/480x300" alt="">
 			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-6">	
 				<div class="col-12">
-					<img src="http://placehold.it/960x600" alt="">
+					<img src="http://placehold.it/960x300" alt="">
 				</div>
-				<div class="clearfix"></div>
+				<div class="col-6">
+					<img src="http://placehold.it/480x300" alt="">
+				</div>
+				<div class="col-6">
+					<img src="http://placehold.it/480x300" alt="">
+				</div>
+			</div>
+
+		</div>
+
+			<div class="col-6">
+				<img src="http://placehold.it/960x600" alt="">
+			</div>
 		</div>
 	</div>
+	<div class="clearfix"></div>
 
+	<div class="loadmore">
+		<p>LOAD MORE</p>
+	</div>
+	<div class="now">
+		<p>Do You Like <b>TheFox</b> Desing? Buy It Now Try Everything</p>
+		<div class="button">PURCHASE NOW</div>
+	</div>
+	<div class="clearfix"></div>
+		<div class="foxcontainer">
+			<div class="skill">
+				<ul>
+					<li>Our Skills</li>
+					<br>
+					<li>ADOBE PHOTOSHOP</li>
+					<br>
+					<li>WORDPRESS THEME</li>
+					<br>
+					<li>JAVASCRIPT</li>
+					<br>
+					<li>ADOBE ILLUSTRATOR</li>
+				</ul>
+			</div>
+			<div class="services">
+				<div class="scontainer">
+					<p>Our Services</p>
+					<img src="http://placehold.it/170x170" alt="theFox">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, eligendi molestiae, asperiores perspiciatis libero dolores excepturi? Quasi, placeat deleniti magni?</p>
+					<h3>VIEW DETAIL</h3>
+				</div>
+			</div>
+		</div>
+		<div class="clearfix"></div>
+	<div class="XXXXX">
+		<ul>
+			<li>79,000</li>
+			<li>754</li>
+			<li>4,000</li>
+			<li>1,000</li>
+		</ul>
+	</div>
+	<div class="clearfix"></div>
 
+	<div class="GGGGG">
+		<div class="text-container">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos ad alias ullam nobis sed placeat obcaecati illo cum sequi maiores delectus laborum officiis, neque reiciendis libero repellat quae porro nesciunt explicabo voluptates, similique excepturi minus! Minima at, doloribus totam officia quidem earum facere vitae, quae illo fugiat consequatur, eligendi numquam.p>
+		</div>
+		<div class="pic-container">
+			<div class="row">
+				<div class="col-33">	
+					<img src="http://placehold.it/170x170" alt="Pic1">
+				</div>	
+				<div class="col-33">	
+					<img src="http://placehold.it/170x170" alt="Pic1">
+				</div>	
+				<div class="col-33">	
+					<img src="http://placehold.it/170x170" alt="Pic1">
+				</div>	
+			</div>
+		</div>
+	</div>
+	<div class="clearfix"></div>
 
+	<div class="manyli">
+		<div class="manyli-container">
+			<ul>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+			</ul>
+		</div>
+		<div class="manyli-container">
+			<ul>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+			</ul>
+		</div>
+		<div class="manyli-container">
+			<ul>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+			</ul>
+		</div>
+		<div class="manyli-container">
+			<ul>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+				<li>Lorem</li>
+			</ul>
+		</div>
+	</div>
+	<div class="5pics">
+			<div class="row">
+				<div class="col-2">
+					<img src="http://placehold.it/380x500" alt="">
+				</div>
+				<div class="col-2">
+					<img src="http://placehold.it/380x500" alt="">
+				</div>
+
+				<div class="col-2">
+					<img src="http://placehold.it/380x500" alt="">
+				</div>
+				<div class="col-2">
+					<img src="http://placehold.it/380x500" alt="">
+				</div>
+				<div class="col-2">
+					<img src="http://placehold.it/380x500" alt="">
+				</div>
+			</div>
+	</div>
+	<div class="block1">
+		<p>UNLIMITED COLORS<br><br>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, officiis</p>
+		<a href="#">PURCHASE NOW</a>
+	</div>
+	<div class="block2">
+		<p>EXTREMELY CUSTOMIZABLE<br><br>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, officiis</p>
+		<a href="#">PURCHASE NOW</a>
+	</div>
+	<div class="block3">
+		<p>PARALLAX BACKGROUND SECTION<br><br>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, officiis</p>
+		<a href="#">PURCHASE NOW</a>
+	</div>
 
 
 
