--- a/thefoxRWD/index.html
+++ b/thefoxRWD/index.html
@@ -48,7 +48,7 @@
 			<div class="clearfix"></div>
 		</div>
 	</div>
-	<!-- <div class="features">
+	<div class="features">
 		<div class="container">
 			
 			<div class="feature">
@@ -215,4 +215,4 @@
 
 
 </body>
-</html> -->
+</html>
